--- a/pom.xml
+++ b/pom.xml
@@ -57,10 +57,11 @@
             <artifactId>guava</artifactId>
             <version>29.0-jre</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.github.phantran/m0c0-maven-plugin -->
         <dependency>
-            <groupId>io.moco</groupId>
+            <groupId>io.github.phantran</groupId>
             <artifactId>m0c0-maven-plugin</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.1</version>
         </dependency>
     </dependencies>
 
@@ -130,9 +131,9 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>io.moco</groupId>
+                <groupId>io.github.phantran</groupId>
                 <artifactId>m0c0-maven-plugin</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0.1</version>
                 <executions>
                      <execution>
                            <goals>
